# FRCTeam1967

./: .gitignore  .gitmodules  README.md  index.html  jankyDrivestick.cpp  params.json  readme.txt  stronghold.yaml
.metadata/: version.ini
2012/.metadata/: wrversion.ini
2012/CameraExperiments/: .cproject  .project  .wrproject  Camera.cpp  jankyTargeting_draft.cpp
2012/CompleteRobot/: .cproject  .project  .wrproject  MyRobot.cpp
2012/SimpleTemplate/: MyRobot.cpp
2012/Testjig/: .cproject  .wrproject  MyRobot.cpp
2012/TrialPrograms/: .project  MyRobot.cpp  sample.txt
2012/VisionSample2012/: .cproject  .project  VisionSample2012.cpp
2012/classes/: jankyShooter.cpp  jankyTargeting.cpp  jankyTurret.cpp
2012/include/: jankyRobot.h  jankyShooter.h  jankyTargeting.h  jankyTurret.h
GRIP/: .project
GRIP/src/: GripPipeline.cpp
GRIP1/src/: GripPipeline.cpp  Robot.cpp
GRIP2/: .project
SanaBallManipulation/: .cproject  .project
UltrasonicTest/: .cproject
UltrasonicTest/src/: Robot.cpp
code/: readme.md
code-java/2022/: README.md
code-java/2023/: README.md  checkProjects.sh  setupNewProject.sh  updateWindowsSymlinks.bat
code-java/jankyLib/: JankyStateMachine.java  JankyTalonFX.java  JankyTask.java  jankyXboxJoystick.java
code/2015_Recycle_Rush/: .cproject  .project  sysProps.xml
code/2016_Stronghold/: .cproject  .project  sysProps.xml
code/2017_Steamworks/: .cproject  .project
code/2018/jetson/cv-capture/tmptest/: CMakeLists.txt  Makefile  capture.cpp  cmake_install.cmake  cv_capture
code/2018/jetson/oldntcore/cscore/: CMakeLists.txt  README-janksters
code/2018_PowerUp/: .cproject  .project
code/2018_PowerUp_VS_Code/: build.gradle
code/Accelerometer Test/: .cproject  .project
code/AerialAssist2014/: .project  .wrmakefile  AerialAssist2014.cpp
code/AniChassis2017/: .project
code/AnishaTwoTransmissions/: sysProps.xml
code/Auto2018/: .cproject  .project
code/Ball Manipulation/: .cproject  sysProps.xml
code/CameraExperiments/: .project  .wrproject  Camera.cpp  sample.txt
code/CompleteRobot/: .project  .wrproject  MyRobot.cpp
code/ElaRopeClimbing/: .project
code/Encoder Test/: .cproject
code/Forklift/: .project
code/ForkliftTest/: .cproject  .project
code/GRIP/: .cproject
code/GRIP1/: .cproject  .project
code/GRIP2/: .cproject
code/GScaling/: .cproject  .project  sysProps.xml
code/HollyProject/: .project  .wrproject
code/IluminsTestDrive/: MyRobot.cpp
code/JankAccelerometer/: .cproject  .project
code/JankyAccelerometer/: .cproject  .project
code/JankyActuator/: .project  .wrproject  JankyActuatorTest.cpp
code/JankyCore/: .cproject  .project  readme.txt
code/JankyEncoderTest/: EncoderTestjig.cpp
code/JankyFoxLiftState/: .cproject  .project  sysProps.xml
code/JankyJoystickInvestigator/: .project  .wrproject  MyRobot.cpp
code/JankyRobotStarter/: JankyRobotStarter.cpp  MyRobot.cpp  jankyRobotTemplate.cpp  jankyRobotTemplate.h
code/JankyTaskTest/: .cproject  .project
code/JankyTaskTestjig/: .project  CounterTaskTestjig.cpp  CounterTaskTestjig.h  MyRobotTaskTestjig.cpp
code/JankyXboxJoystickTestjig/: .project  .wrmakefile  .wrproject  MyRobot.cpp
code/LEDTest/: .cproject
code/MadsClassesPractice/: .project
code/MadsDriveTeamCamera/: .cproject  .project
code/MadsGameComponent2018/: .cproject  .project
code/MadsInAndOut/: .cproject  .project
code/MadsUpAndDown/: .project
code/MecanumDriveTestJig/: .cproject
code/MegTwoTransmissions/: .cproject
code/NatSndChTestJig/: .cproject  sysProps.xml
code/NatSolenoidTestJig/: .cproject  .gitignore
code/PDP CAN Monitoring/: .cproject  sysProps.xml
code/RampingTest/: .cproject  .project
code/Reorientation/: .project  sysProps.xml
code/RookieOctoberProject/: .cproject
code/Rope Climbing 2017/: .cproject  .project
code/SanAutoGyroDrive/: .cproject  .project
code/SanGearsandFuel/: .project  sysProps.xml
code/SensorTestjig/: .project  .wrmakefile  .wrproject  SensorTestjig.cpp
code/SimpleTemplate/: .project  .wrproject  MyRobot.cpp
code/SmartDashboardTestjig/: .project  .wrproject  MyRobot.cpp
code/SolenoidTestJig/: .cproject  .project  sysProps.xml
code/SolenoidTestjig/: .cproject  .project
code/SoundSenorPW/: .cproject  .project
code/Testjig/: .project  .wrmakefile  .wrproject
code/UltimateAscent-2013/: .project  .wrproject  UltimateAscent-2013.cpp
code/jetson/cv-capture/: .capture.cpp.swo  .capture.cpp.swp  CMakeLists.txt  README.txt  capture.cpp  capture_v1.cpp  gid.sh  toAnika.sh
code/jetson/cv-capture/tmptest/: CMakeCache.txt
docs/: Checkin_Sample.bat  Checkin_Sample.sh  Downloading software ( 2015)  Identity_Change.sh  Push_Sample.sh  java resetting state machines.txt  windriver.txt
(+989 files in other folders)
